crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__set__missing_closing_curly_brace_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..137,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 128..137,
                    value: Set(
                        ExprSet {
                            node_index: NodeIndex(None),
                            range: 128..137,
                            elts: [
                                BinOp(
                                    ExprBinOp {
                                        node_index: NodeIndex(None),
                                        range: 131..136,
                                        left: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 131..132,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 135..136,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
6 | x + y
  |      ^ Syntax Error: unexpected EOF while parsing
  |
